fixed project tooltips contrast

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   --section-orizontal-padding: 17vw;
   --section-vertical-padding: 80px;
   --nav-height: 7rem;
+
+  --border-radius: .7rem;
 }
 
 * {
@@ -108,7 +110,7 @@ button {
   transition-property: border-color color;
   gap: 0.7rem;
   font-size: 1.4rem;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
@@ -273,7 +275,7 @@ nav {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  border-radius: 0 1rem 1rem 0;
+  border-radius: 0 var(--border-radius) var(--border-radius) 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -393,7 +395,7 @@ nav {
 .featured-project-info-modal {
   position: relative;
   background: var(--primary-color-500);
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   width: 50rem;
   width: 50rem;
   transform: scale(0.95);
@@ -460,7 +462,7 @@ nav {
   text-transform: uppercase;
   color: var(--primary-color-700);
   font-weight: 600;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   background: var(--primary-color-400);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -512,7 +514,7 @@ nav {
   max-width: 549px;
   height: auto;
   height: fit-content;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
 }
 
 .featured-project-details {
@@ -552,12 +554,13 @@ nav {
   transform: translate(-50%, 10px);
   top: 135%;
   background: var(--primary-color-400);
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.1));
   z-index: 10;
   opacity: 0;
   visibility: hidden;
   transition: 0.2s ease all;
+  border: 1px solid #d3e6ff;
 }
 
 .project-info-tech-wrapper::before {
@@ -565,18 +568,27 @@ nav {
   position: absolute;
   pointer-events: none;
   left: 50%;
-  top: -30px;
-  transform: translateX(-50%);
-  border: 15px solid transparent;
-  border-bottom-color: var(--primary-color-400);
+  top: -11px;
+  width: 20px;
+  height: 20px;
+  transform: translateX(-50%) rotate(45deg);
+  background: var(--primary-color-400);
+  border-top: 1px solid #d3e6ff;
+  border-left: 1px solid #d3e6ff;
+  z-index: 1;
 }
 
 .project-info-tech-wrapper h4 {
+  position: relative;
   color: var(--primary-color-700);
   font-size: 2rem;
   padding: 1rem;
   white-space: nowrap;
-  border-bottom: 1px solid #deecff;
+  border-bottom: 1px solid #d3e6ff;
+  z-index: 2;
+  background: var(--primary-color-400);
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  z-index: 2;
 }
 
 .project-info-tech {
@@ -593,7 +605,7 @@ nav {
   background: #edf5ff;
   color: #1b6ad1;
   padding: 0.5rem 0.8rem;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
 }
 
 .project-info-wrapper button:hover + .project-info-tech-wrapper,
@@ -690,7 +702,7 @@ nav {
   gap: 1rem;
   width: 11rem;
   height: 9rem;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   background: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -765,7 +777,7 @@ nav {
   width: 100%;
   background: var(--primary-color-400);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   position: relative;
 }
 
@@ -883,7 +895,7 @@ nav {
   justify-content: space-between;
   position: relative;
   background: var(--accent-color);
-  border-radius: 0 1rem 1rem 0;
+  border-radius: 0 var(--border-radius) var(--border-radius) 0;
   min-width: 50%;
   gap: 3rem;
 }
@@ -963,7 +975,7 @@ nav {
   gap: 1rem;
   padding: 1rem;
   width: fit-content;
-  border-radius: 0.7rem;
+  border-radius: var(--border-radius);
   background: var(--primary-color-400);
 }
 
@@ -1233,7 +1245,7 @@ footer p {
 
   .contact-form p {
     padding: 0.5rem;
-    border-radius: 0.7rem;
+    border-radius: var(--border-radius);
     background: #edf5ff;
     color: #1b6ad1;
   }
@@ -1265,13 +1277,13 @@ footer p {
 
   .copy-email-btn {
     background: var(--accent-color);
-    width: 3.4rem;
-    height: 3.4rem;
+    width: 3.6rem;
+    height: 3.6rem;
   }
 
   .copy-email-btn svg {
-    width: 1.9rem;
-    height: 1.9rem;
+    width: 2rem;
+    height: 2rem;
   }
 }
 
@@ -1497,9 +1509,9 @@ footer p {
   }
 
   .project-info-tech-wrapper::before {
-    right: 6.6rem;
+    right: 6.9rem;
     left: auto;
-    transform: translateX(0);
+    transform: translateX(0) rotate(45deg);
   }
 
   .project-info-wrapper button:hover + .project-info-tech-wrapper,
@@ -1591,14 +1603,6 @@ footer p {
 
   .skill {
     width: 47%;
-  }
-
-  .skill img {
-    height: 2.5rem;
-  }
-
-  .skill span {
-    font-size: 1.4rem;
   }
 }
 
